# swift-android-cld2

./: CMakeLists.txt  RDCld2.podspec  README.md
android/: build.sh
android/jni/: Android.mk  Application.mk
internal/: cld2_do_score.cc  cld2_dynamic_data.cc  cld2_dynamic_data_extractor.cc  cld2_dynamic_data_loader.cc  compact_lang_det.cc  compact_lang_det_c.cc  compact_lang_det_impl.h  scoreutf8text.cc
mac/cld2/: .gitignore
mac/cld2/cld2.xcodeproj/: project.pbxproj
mac/cld2/cld2Swift/: Info.plist  LanguageDetector.swift  cld2Swift.h
mac/cld2/cld2SwiftTests/: cld2SwiftTests.swift
mac/cld2/modules/cld2/: cld2.h  module.modulemap
modules/RDCld2/: module.modulemap
public/: compact_lang_det_c.h
